# Design

./: .eslintrc.json  .gitignore  .gitmodules  Contributing.md  README.md  com.github.dubstar.design.json  design.doap  eslint.config.mjs  io.github.dubstar_04.design.json  meson.build  package-lock.json  package.json  wood.dan.design.json
.github/ISSUE_TEMPLATE/: bug-report---feature-request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: DesignQA.yml
data/: com.github.dubstar.design.data.gresource.xml  com.github.dubstar.design.desktop.in  com.github.dubstar.design.gschema.xml  com.github.dubstar.design.metainfo.xml  io.github.dubstar_04.design.data.gresource.xml  io.github.dubstar_04.design.desktop  io.github.dubstar_04.design.gschema.xml  io.github.dubstar_04.design.metainfo.xml  meson.build  wood.dan.design.appdata.xml.in  wood.dan.design.data.gresource.xml  wood.dan.design.desktop.in  wood.dan.design.gschema.xml
data/icons/: meson.build
data/ui/: debugWindow.blp  export.blp  layers.blp  plot.blp  preferencePageDimensionStyle.blp  preferencePageLineType.blp  preferencePageSettings.blp  preferencePageTextStyle.blp  preferences.blp  properties.blp  shortcuts.blp  window.blp  window.ui  window.ui.def
data/ui/layers/: layers.blp  layersWindow.blp
data/ui/preferences/: dimensionStyleRow.blp  preferenceDimensionStyleRow.blp  preferencePageDimensionStyle.blp  preferencePageLineType.blp  preferencePageSettings.blp  preferencePageTextStyle.blp  preferenceStyleRow.blp  preferences.blp  preferencesDialog.blp
data/ui/properties/: propertiesWindow.blp
data/ui/widgets/: preferenceRow.blp
js/lib/: commandLine.js  design-engine.js
po/: LINGUAS  POTFILES  design.pot  es.po  it.po  ko.po  meson.build  nl.po  pt_BR.po  tr.po
src/: com.github.dubstar.design.src.gresource.xml  io.github.dubstar_04.design.src.gresource.xml  meson.build  window.js  window.ui  wood.dan.design.data.gresource.xml  wood.dan.design.in  wood.dan.design.src.gresource.xml
src/Design/: canvas.js  commandLine.js  debugWindow.js  exportWindow.js  fileIO.js  layersWindow.js  main.js  plotWindow.js  preferencePageDimensionStyle.js  preferencePageLineType.js  preferencePageSettings.js  preferencePageTextStyle.js  preferencesWindow.js  propertiesWindow.js  settings.js  window.js
src/Design/Layers/: layersWindow.js
src/Design/Preferences/: preferenceDimensionStyleRow.js  preferencePageDimensionStyle.js  preferencePageLineType.js  preferencePageSettings.js  preferencePageTextStyle.js  preferenceStyleRow.js  preferencesDialog.js
src/Design/Properties/: propertiesWindow.js
src/Design/Widgets/: preferenceRow.js
